Revert "remove card overflow, prevents drop-shadow on safari"
This reverts commit 18434577b8f70d3b231bcf5a3692c520838c1b47.

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -48,7 +48,7 @@
   }
 
   .card {
-    @apply rounded-sm bg-white drop-shadow;
+    @apply overflow-hidden rounded-sm bg-white drop-shadow;
 
     &--hover {
       @apply duration-200 hover:drop-shadow-md;
